--- a/login.html
+++ b/login.html
@@ -26,6 +26,8 @@
             <div class="dai">
                 <h1>ログイン</h1>
                 <p id="dat">おはようございます</p> <script> var p = document.getElementById('dat'); console.log( p ); </script>
+                <img src="1.png" alt="商品ページ１へ" >
+                <img src="2.png" alt="商品ページ１へ" >
             </div>
             <py-script>
 
